Bug 596970 - ASSERTION: You can't dereference a NULL nsCOMPtr with operator->() in AsyncStatement::~AsyncStatement(). r=asuth a=dietrich