storage/src/mozStorageAsyncStatement.cpp
@@ -271,7 +271,7 @@ AsyncStatement::~AsyncStatement()
     // nsCOMPtr.  Which it is not; it's an nsRefPtr.
     Connection *forgottenConn = nsnull;
     mDBConnection.swap(forgottenConn);
-    (void)::NS_ProxyRelease(mDBConnection->threadOpenedOn, forgottenConn);
+    (void)::NS_ProxyRelease(forgottenConn->threadOpenedOn, forgottenConn);
   }
 }
 
